--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
                     <input type="text" id="userId">
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
-                        <option type="text" value="normal" selected="selected">1. General Conversation</option>
+                        <option type="text" value="normal" selected>1. General Conversation</option>
                         <option value="qa">2. Question/Answering</option>
                         <option value="translation">3. Translation</option>
                     </select>
