--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,7 @@
                         <option type="text" value="normal" selected>1. General Conversation</option>
                         <option value="qa">2. Question/Answering</option>
                         <option value="translation">3. Translation</option>
+                        <option value="sentiment">4. Extracted Topic and sentiment</option>                        
                     </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
