--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,8 @@
                         <option type="text" value="normal" selected>1. General Conversation</option>
                         <option value="qa">2. Question/Answering</option>
                         <option value="translation">3. Translation</option>
-                        <option value="sentiment">4. Extracted Topic and sentiment</option>                        
+                        <option value="sentiment">4. Extracted Topic and sentiment</option>          
+                        <option value="none">9. No prompt</option>                                                
                     </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
