--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,7 @@
                         <option value="qa">2. Question/Answering</option>
                         <option value="translation">3. Translation</option>
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
+                        <option value="extraction">5. Information Extraction</option>          
                         <option value="none">9. No prompt</option>                                                
                     </select>
                 </div>
