--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
                         <option value="translation">3. Translation</option>
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
                         <option value="extraction">5. Information Extraction</option>          
+                        <option value="pii">6. Removing PII</option>          
                         <option value="none">9. No prompt</option>                                                
                     </select>
                 </div>
