--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
                         <option value="extraction">5. Information Extraction</option>          
                         <option value="pii">6. Removing PII</option>          
+                        <option value="grammar">6. Checking Grammatical Errors</option>                                  
                         <option value="none">9. No prompt</option>                                                
                     </select>
                 </div>
