--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,8 @@
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
                         <option value="extraction">5. Information Extraction</option>          
                         <option value="pii">6. Removing PII</option>          
-                        <option value="grammar">6. Checking Grammatical Errors</option>                                  
+                        <option value="grammar">7. Checking Grammatical Errors</option>                                  
+                        <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
                         <option value="none">9. No prompt</option>                                                
                     </select>
                 </div>
