--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
                         <option value="extraction">5. Information Extraction</option>          
                         <option value="pii">6. Removing PII</option>          
                         <option value="grammar">7. Checking Grammatical Errors</option>                                  
-                        <option value="complex_question">8. Complex question (step-by-step)</option>                                  
+                        <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
                         <option value="none">9. No prompt</option>                                                
                     </select>
                 </div>
