--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,8 @@
                         <option value="pii">6. Removing PII</option>          
                         <option value="grammar">7. Checking Grammatical Errors</option>                                  
                         <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
-                        <option value="none">9. No prompt</option>                                                
+                        <option value="like-child">9. Child Conversation (few shot)</option>                                  
+                        <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
