--- a/html/index.html
+++ b/html/index.html
@@ -22,11 +22,12 @@
                         <option value="qa">2. Question/Answering</option>
                         <option value="translation">3. Translation</option>
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
-                        <option value="extraction">5. Information Extraction</option>          
+                        <option value="extraction">5. Information Extraction (email)</option>          
                         <option value="pii">6. Removing PII</option>          
                         <option value="grammar">7. Checking Grammatical Errors</option>                                  
                         <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
                         <option value="like-child">9. Child Conversation (few shot)</option>                                  
+                        <option value="get-weather">10. getting weather (function calling)</option>                                  
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
