--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
                         <option type="text" value="normal" selected>1. General Conversation</option>
-                        <option value="qa">2. Question/Answering</option>
+                        <option value="qa">2. Question/Answering (RAG)</option>
                         <option value="translation">3. Translation</option>
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
                         <option value="extraction">5. Information Extraction (email)</option>          
@@ -28,6 +28,7 @@
                         <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
                         <option value="like-child">9. Child Conversation (few shot)</option>                                  
                         <option value="get-weather">10. getting weather (function calling)</option>                                  
+                        <option value="funny">20. free conversation</option>                                  
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
