--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,9 @@
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
                         <option type="text" value="normal" selected>1. General Conversation</option>
-                        <option value="qa">2. Question/Answering (RAG)</option>
+                        <option value="qa-kendra">2-1. Question/Answering (RAG)</option>
+                        <option value="qa-opensearch">2-2. Question/Answering (RAG)</option>
+                        <option value="qa-faiss">2-3. Question/Answering (RAG)</option>
                         <option value="translation">3. Translation</option>
                         <option value="sentiment">4. Extracted Topic and sentiment</option>          
                         <option value="extraction">5. Information Extraction (email)</option>          
