--- a/html/index.html
+++ b/html/index.html
@@ -23,14 +23,14 @@
                         <option value="qa-opensearch">2-2. Question/Answering (RAG-opensearch)</option>
                         <option value="qa-faiss">2-3. Question/Answering (RAG-faiss)</option>
                         <option value="translation">3. Translation</option>
-                        <option value="grammar">4. Checking Grammatical Errors</option>                                  
-                        <option value="sentiment">5. Extracted Topic and sentiment</option>          
+                        <option value="grammar">4. Grammatical Error Correction</option>                                  
+                        <option value="sentiment">5. Extracted Topic and Sentiment</option>          
                         <option value="extraction">6. Information Extraction (email)</option>          
                         <option value="pii">7. Removing PII</option>          
                         <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
                         <option value="like-child">9. Child Conversation (few shot)</option>                                  
-                        <option value="get-weather">10. getting weather (function calling)</option>                                  
-                        <option value="funny">20. free conversation</option>                                  
+                        <option value="funny">10. Free Conversation</option>                                  
+                        <option value="get-weather">11. Weather (function calling)</option>                                  
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
