--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                         <option value="sentiment">5. Extracted Topic and Sentiment</option>          
                         <option value="extraction">6. Information Extraction (email)</option>          
                         <option value="pii">7. Removing PII</option>          
-                        <option value="step-by-step">8. Complex question (step-by-step)</option>                                  
+                        <option value="step-by-step">8. Complex Question (step-by-step)</option>                                  
                         <option value="like-child">9. Child Conversation (few shot)</option>                                  
                         <option value="funny">10. Free Conversation</option>                                  
                         <option value="get-weather">11. Weather (function calling)</option>                                  
