--- a/html/index.html
+++ b/html/index.html
@@ -29,8 +29,9 @@
                         <option value="pii">7. Removing PII</option>          
                         <option value="step-by-step">8. Complex Question (step-by-step)</option>                                  
                         <option value="like-child">10. Child Conversation (few shot)</option>                                  
-                        <option value="funny">11. Free Conversation</option>                                  
-                        <option value="get-weather">12. Weather (function calling)</option>                                  
+                        <option value="timestamp-extraction">11. Timestamp Extraction</option>                                  
+                        <option value="funny">12. Free Conversation</option>                                  
+                        <option value="get-weather">13. Weather (function calling)</option>                                  
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
