--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
                         <option type="text" value="normal" selected>1. General Conversation</option>
+                        <option value="qa-all">2-0. Question/Answering (RAG ALL)</option>
                         <option value="qa-kendra">2-1. Question/Answering (RAG-kendra)</option>
                         <option value="qa-opensearch">2-2. Question/Answering (RAG-opensearch)</option>
                         <option value="qa-faiss">2-3. Question/Answering (RAG-faiss)</option>
