--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,9 @@
                         <option value="step-by-step">8. Complex Question (step-by-step)</option>                                  
                         <option value="like-child">10. Child Conversation (few shot)</option>                                  
                         <option value="timestamp-extraction">11. Timestamp Extraction</option>                                  
-                        <option value="funny">12. Free Conversation</option>                                  
-                        <option value="get-weather">13. Weather (function calling)</option>                                  
+                        <option value="funny">12. Free Conversation</option>   
+                        <option value="dual-search">13. RAG - Dual Search (Korean/English)</option>                                                          
+                        <option value="get-weather">14. Weather (function calling)</option>                                  
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
