--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,9 @@
                         <option value="timestamp-extraction">11. Timestamp Extraction</option>                                  
                         <option value="funny">12. Free Conversation</option>   
                         <option value="dual-search">13. RAG - Dual Search (Korean/English)</option>                                                          
-                        <option value="get-weather">14. Weather (function calling)</option>                                  
+                        <option value="code-generation-python">14. Code Generation - Python</option>         
+                        <option value="code-generation-nodejs">15. Code Generation - Node.js</option>
+                        <option value="get-weather">16. Weather (function calling)</option>                                  
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
