--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,8 @@
                 <div class="input">
                     <label for="userId">User Id:</label>
                     <input type="text" id="userId">
-                    <label for="convtype">Conversation Type:</label>
+                    <text>Conversation Type: </text>
+                    <label for="userId">User Id:</label>
                     <select name="conversationType" id="convtype">
                         <option type="text" value="normal" selected>1. General Conversation</option>
                         <option value="qa-all">2-0. Question/Answering (RAG ALL)</option>
