--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
                         <option value="like-child">12. Child Conversation (few shot)</option>                                  
                         <option value="timestamp-extraction">13. Timestamp Extraction</option>                                  
                         <option value="funny">14. Free Conversation</option>   
-                        <option value="get-weather">15. Weather (function calling)</option>                                  
+                    <!--  <option value="get-weather">15. Weather (function calling)</option> -->
                         <option value="none">99. No prompt</option>                                                
                     </select>
                 </div>
