--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
                         <option value="timestamp-extraction">13. Timestamp Extraction</option>                                  
                         <option value="funny">14. Free Conversation</option>   
                     <!--  <option value="get-weather">15. Weather (function calling)</option> -->
-                        <option value="none">99. No prompt</option>                                                
+                    <!--    <option value="none">99. No prompt</option>   -->
                     </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
