--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,8 @@
                     <input type="text" id="userId">
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
-                        <option type="text" value="normal" selected>1. General Conversation</option>
+                        <option type="text" value="normal" selected>1-1. General Conversation</option>
+                        <option value="agent">1-2. Agent</option>
                         <option value="qa-all">2-0. Question/Answering (RAG ALL)</option>
                         <option value="qa-kendra">2-1. Question/Answering (RAG-kendra)</option>
                         <option value="qa-opensearch">2-2. Question/Answering (RAG-opensearch)</option>
