--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,8 @@
                     <text>Conversation Type: </text>
                     <select name="conversationType" id="convtype">
                         <option type="text" value="normal" selected>1-1. General Conversation</option>
-                        <option value="agent">1-2. Agent</option>
+                        <option value="agent-react">1-2. Agent (ReAct)</option>
+                        <option value="agent-react-chat">1-3. Agent (ReAct Chat)</option>
                         <option value="qa-all">2-0. Question/Answering (RAG ALL)</option>
                         <option value="qa-kendra">2-1. Question/Answering (RAG-kendra)</option>
                         <option value="qa-opensearch">2-2. Question/Answering (RAG-opensearch)</option>
