--- a/html/index.html
+++ b/html/index.html
@@ -39,6 +39,11 @@
                     <!--  <option value="get-weather">15. Weather (function calling)</option> -->
                     <!--    <option value="none">99. No prompt</option>   -->
                     </select>
+                    <br><text>TTS: </text>
+                    <select name="tts" id="tts">
+                        <option value="Silent">Silent</option>
+                        <option value="Speek">Speek</option>
+                    </select>
                 </div>
                 <input class="btn" type="submit" value="Submit">                
             </form>
